<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
<string name="app_name" tools:ignore="PrivateResource">Coinz</string>
    <string name="access_token">pk.eyJ1IjoibWljaGFlbGFicmV6aW5vdmEiLCJhIjoiY2pvaXE0cDFuMGF2NjNwcW5ndnBjODZrZSJ9.wRzGNNsO9tL1TRav_zu0Yw</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="_0">0</string>
    <string name="z">Z</string>
    <string name="coin">COIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">Sign Out</string>
    <string name="gift">Gift</string>
    <string name="collected">Collected</string>
    <string name="total_score">Total Score</string>
    <string name="transfer_to_the_bank">Transfer to the bank</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="enter_amount_to_transfer">Enter amount to transfer</string>
    <string name="transfer_to_a_friend">Transfer to a friend</string>
    <string name="spare_change">Spare Change</string>
    <string name="enter_friend_s_email">Enter friend\'s email</string>
</resources>
